tests/error/wrong_arg_count.magi
// TEST: Wrong argument count should error

add :: (a: i32, b: i32) -> i32 {
    return a + b
}

main :: () -> i32 {
    x := add(1)
    return 0
}
